src/app/globals.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;500;600;700&display=swap');

* {
  letter-spacing: 0.5px;
  -webkit-tap-highlight-color: transparent;
}

html {
  scroll-behavior: smooth;
}

@tailwind base;
@tailwind components;
@tailwind utilities;

.no-scrollbar::-webkit-scrollbar {
  display: none;
}

.no-scrollbar {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

iframe {
  filter: invert(5%) grayscale(1);
}

iframe .gm-style-mtc {
  display: none;
}

/* Our Work Process */

.process-card h1 {
  font-size: 50px;
  font-weight: 700;
  margin-bottom: 12px;
  position: relative;
  -webkit-text-stroke-width: 1.5px;
  -webkit-text-stroke-color: #141414;
  color: transparent;
}

/* Testimonial Section */

input[type='number']::-webkit-inner-spin-button,
input[type='number']::-webkit-outer-spin-button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  margin: 0;
}

.address svg {
  width: 15.7%;
}

@media only screen and (min-width: 320px) and (max-width: 639px) {
  .process-card h1 {
    font-size: 40px;
  }
}

@media only screen and (min-width: 1600px) {
  .container {
    max-width: 1410px;
  }
}
@media only screen and (min-width: 1400px) and (max-width: 1599px) {
  .container {
    max-width: 1280px;
  }

  .address svg {
    width: 19.8%;
  }
}
@media only screen and (min-width: 1200px) and (max-width: 1399px) {
  .container {
    max-width: 1280px;
  }
  .address svg {
    width: 19.8%;
  }
}
@media only screen and (min-width: 992px) and (max-width: 1199px) {
  .container {
    max-width: 948px;
  }
  .process-card h1 {
    font-size: 46px;
  }
  .footerTitle {
    padding-left: 85px !important;
  }

  .footerTitle::after {
    left: 4rem !important;
  }
  .footerTitle {
    padding-left: 80px !important;
    padding-right: 0;
    font-size: 20px !important;
  }
  .address svg {
    width: 6.2%;
  }
}
@media only screen and (min-width: 768px) and (max-width: 991px) {
  .container {
    max-width: 100%;
  }
  .process-card h1 {
    font-size: 38px;
    margin-bottom: 0;
  }

  .footerTitle {
    padding-left: 0 !important;
    padding-right: 45px;
  }
  .address svg {
    width: 11.1%;
  }
}
@media only screen and (min-width: 640px) and (max-width: 767px) {
  .container {
    max-width: 100%;
  }

  .process-card h1 {
    font-size: 46px;
  }

  .footerTitle {
    padding-left: 0 !important;
    padding-right: 0px;
  }
}
@media only screen and (min-width: 480px) and (max-width: 639px) {
  .container {
    max-width: 100%;
  }
  .about_box {
    width: 100%;
  }
  .footerTitle {
    padding-left: 0 !important;
  }
  .address svg {
    width: 14.4%;
  }
}
@media only screen and (min-width: 320px) and (max-width: 479px) {
  .container {
    max-width: 100%;
  }

  .footerTitle {
    padding-left: 0 !important;
  }
  .address svg {
    width: 14.4%;
  }
}

/* styles.css for accordian open */
.AccordionContent {
  overflow: hidden;
}
.AccordionContent[data-state='open'] {
  animation: slideDown 400ms ease-out;
}
.AccordionContent[data-state='closed'] {
  animation: slideUp 400ms ease-out;
}

@keyframes slideDown {
  from {
    height: 0;
  }
  to {
    height: var(--radix-accordion-content-height);
  }
}

@keyframes slideUp {
  from {
    height: var(--radix-accordion-content-height);
  }
  to {
    height: 0;
  }
}

